[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-think-tool"
version = "0.1.0"
description = "An MCP server implementing the think tool for Claude and other LLMs"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.5.0",
]

[project.scripts]
mcp-think-tool = "think_tool.server:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
